--- a/ticket.css
+++ b/ticket.css
@@ -106,7 +106,7 @@ body {
     z-index: 100;
     width: 400px;
     height: 200px;
-    background-image: url("./assets/work/Hera/kaia_render.jpg");
+    /* background-image: url("./assets/work/Hera/kaia_render.jpg"); */
     background-size: 100% 100%;
     /* filter: grayscale(100%); */
 }
